@startuml
skinparam defaultFontName "Noto Sans CJK SC"
skinparam defaultFontSize 14
title 充电站管理系统 ER 图

entity users {
  *id: UUID (PK)
  --
  name: VARCHAR(100)
  *phone: VARCHAR(32) (UNIQUE)
  plate_number: VARCHAR(32)
  *password_hash: VARCHAR(255)
  *role: VARCHAR(32) (user/maintainer/admin/super_admin)
  balance: NUMERIC(12,2)
  frozen_until: TIMESTAMPTZ (欠费冻结截止时间)
  *failed_login_attempts: INTEGER (连续失败次数，>=5触发验证码)
  account_locked_until: TIMESTAMPTZ (锁定截止时间)
  password_reset_token: VARCHAR(255) (密码重置令牌)
  password_reset_token_hash: VARCHAR(64) (SHA-256 令牌哈希)
  reset_token_expires_at: TIMESTAMPTZ (令牌过期时间)
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity stations {
  *id: UUID (PK)
  --
  *name: VARCHAR(200)
  location: TEXT
  charger_count: INTEGER
  status: VARCHAR(32)
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity chargers {
  *id: UUID (PK)
  --
  *station_id: UUID (FK)
  *charger_code: VARCHAR(64) (UNIQUE)
  type: VARCHAR(32)
  status: VARCHAR(32)
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity charge_records {
  *id: UUID (PK)
  --
  *user_id: UUID (FK)
  *charger_id: UUID (FK)
  start_time: TIMESTAMPTZ
  end_time: TIMESTAMPTZ
  energy_kwh: NUMERIC(10,3)
  fee: NUMERIC(12,2)
  status: VARCHAR(32)
  deduction_status: VARCHAR(32) (扣费状态)
  created_at: TIMESTAMPTZ
}

entity payments {
  *id: UUID (PK)
  --
  *user_id: UUID (FK)
  charge_record_id: UUID (FK)
  method: VARCHAR(32)
  *amount: NUMERIC(12,2)
  status: VARCHAR(32)
  gateway_tx_id: VARCHAR(255) (UNIQUE 幂等键)
  gateway_callback_payload: JSONB
  created_at: TIMESTAMPTZ
}

entity repairs {
  *id: UUID (PK)
  --
  *charger_id: UUID (FK)
  reporter_id: UUID (FK)
  description: TEXT
  status: VARCHAR(32)
  handled_by: UUID (FK)
  reject_reason: TEXT
  reported_at: TIMESTAMPTZ
  handled_at: TIMESTAMPTZ
}

entity audit_logs {
  *id: UUID (PK)
  --
  actor_id: UUID
  actor_type: VARCHAR(32)
  *action: VARCHAR(128)
  resource: VARCHAR(128)
  resource_id: UUID
  payload: JSONB
  client_ip: VARCHAR(45)
  user_agent: TEXT
  created_at: TIMESTAMPTZ
}

stations ||--o{ chargers
users ||--o{ charge_records
chargers ||--o{ charge_records
users ||--o{ payments
charge_records ||--o| payments
users ||--o{ repairs
chargers ||--o{ repairs
users ||--o{ audit_logs
@enduml